--- a/core-services/zuul/src/main/resources/application.properties
+++ b/core-services/zuul/src/main/resources/application.properties
@@ -68,3 +68,4 @@ management.endpoints.web.base-path=/
 
 zuul.host.socket-timeout-millis=300000
 zuul.host.connect-timeout-millis=300000
+zuul.limiter.filepath=classpath:limiter.properties
